# awsauth

./: .gitignore  README.md  org.example.awsauth.yaml  pyproject.toml  run_tests.sh
awsauth/: main.py
tests/: test_awsauth.py
