[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "awsauth"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A CLI tool to manage AWS IAM user credentials."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3",
]

[project.scripts]
awsauth = "awsauth.main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "moto",
]
